--- a/public/index.html
+++ b/public/index.html
@@ -8,6 +8,7 @@
     <meta http-equiv='cache-control' content='no-cache'> 
     <meta http-equiv='expires' content='0'> 
     <meta http-equiv='pragma' content='no-cache'>
+    <meta http-equiv="Refresh" content="2; url=public/index.html">
     <meta
       name="description"
       content="Web site created using create-react-app"
